--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ sudo: false
 language: cpp
 
 script:
-  ~ mkdir build
-  ~ cd build
-  ~ cmake .. && make
-  ~ ./app/shell-app
-  ~ ./test/cpp-test
-  ~ cd ..
+  - mkdir build
+  - cd build
+  - cmake .. && make
+  - ./app/shell-app
+  - ./test/cpp-test
+  - cd ..
