--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,40 @@
----
-sudo: false
-language: cpp
+# We need a decent ubuntu dist
+sudo: required
+dist: trusty
 
+# Modern cpp settings from
+#  http://genbattle.bitbucket.org/blog/2016/01/17/c++-travis-ci/
+language: cpp
+matrix:
+  include:
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - george-edison55-precise-backports
+          packages:
+            - g++-5
+            - cmake
+            - cmake-data
+      env: COMPILER=g++-5
+
+before_install:
+  - pip install --user cpp-coveralls
+install:
+  - sudo apt-get install -y -qq lcov
 script:
+  - export CXX=$COMPILER;
   - mkdir build
   - cd build
-  - cmake .. && make
-  - ./app/shell-app
-  - ./test/cpp-test
+  - cmake -DCOVERAGE=ON -DCMAKE_BUILD_TYPE=Debug ../
+  - make
+  - make code_coverage
+  - test/cpp-test
 
-after_success: "sbt coveralls"
+after_success:
+  - coveralls --root .. -E ".*external.*" -E ".*CMakeFiles.*" -E ".*test/.*.cpp.*"
+
+notifications:
+  email: false
